# todoapp

./: .gitignore  .mega-linter.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  dist-workspace.toml  err.txt  mise.toml  release-plz.toml  skills-lock.json  tda-spec.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/tda-app/: Cargo.toml
crates/tda-app/src/: aggregate.rs  import_sp.rs  io.rs  lib.rs  query.rs  service.rs  tasks.rs
crates/tda-app/tests/: decider.rs  import_sp.rs  m1.rs  props.rs
crates/tda-app/tests/snapshots/: m1__markdown_export_snapshot.snap
crates/tda-cli/: Cargo.toml
crates/tda-cli/src/: main.rs
crates/tda-conformance/: Cargo.toml
crates/tda-conformance/src/: lib.rs
crates/tda-core/: Cargo.toml
crates/tda-core/src/: command.rs  lib.rs  model.rs  ports.rs  query.rs  short_id.rs  temporal.rs
crates/tda-store-mem/: Cargo.toml
crates/tda-store-mem/src/: lib.rs
crates/tda-store-mem/tests/: conformance.rs
crates/tda-store-turso/: Cargo.toml
crates/tda-store-turso/src/: lib.rs  schema.sql  schema_003_recurrence.sql  schema_004_issueref.sql
crates/tda-store-turso/tests/: conformance.rs  injection.rs
crates/tda-tui/: Cargo.toml  config.default.toml  keybindings.default.toml
crates/tda-tui/src/: app.rs  config.rs  human_duration.rs  keymap.rs  lib.rs  main.rs  schedule.rs  ui.rs
crates/todoapp-app/: CHANGELOG.md  Cargo.toml  README.md
crates/todoapp-app/src/: aggregate.rs  import_sp.rs  io.rs  query.rs  service.rs  tasks.rs
crates/todoapp-app/tests/: decider.rs  import_sp.rs  props.rs
crates/todoapp-cli/: CHANGELOG.md  Cargo.toml
crates/todoapp-cli/src/: command.rs  ipc.rs  main.rs  svc.rs  tui.default.toml
crates/todoapp-cli/src/tui/: app.rs  config.rs  human_duration.rs  keymap.rs  markdown.rs  mod.rs  schedule.rs  state.rs  text_edit.rs  ui.rs
crates/todoapp-config/: CHANGELOG.md  Cargo.toml  README.md
crates/todoapp-config/src/: lib.rs
crates/todoapp-conformance/: Cargo.toml  README.md
crates/todoapp-conformance/src/: lib.rs
crates/todoapp-conformance/tests/: turso.rs
crates/todoapp-core/: CHANGELOG.md  Cargo.toml  README.md
crates/todoapp-core/src/: command.rs  lib.rs  mentions.rs  model.rs  ports.rs  query.rs  temporal.rs  testing.rs  title_syntax.rs
crates/todoapp-store-mem/: Cargo.toml  README.md
crates/todoapp-store-mem/src/: lib.rs
crates/todoapp-store-mem/tests/: conformance.rs
crates/todoapp-store-turso/: CHANGELOG.md  Cargo.toml  README.md
crates/todoapp-store-turso/src/: lib.rs  schema_002_paused_status.sql  schema_005_timelog.sql  schema_006_archived.sql  schema_007_attachments.sql  schema_008_workspace.sql
crates/todoapp-tui/: CHANGELOG.md  Cargo.toml  README.md  config.default.toml  keybindings.default.toml  tui.default.toml
crates/todoapp-tui/src/: app.rs  clipboard.rs  config.rs  keymap.rs  lib.rs  markdown.rs  schedule.rs  ui.rs
docs/: demo.cast
skills/tda/: SKILL.md
skills/tda/reference/: cli.md
