[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidB/todoapp"
authors = ["David Bernard"]

[workspace.dependencies]
tda-core = { path = "crates/tda-core" }
tda-app = { path = "crates/tda-app" }
tda-store-mem = { path = "crates/tda-store-mem" }
tda-store-turso = { path = "crates/tda-store-turso" }
tda-conformance = { path = "crates/tda-conformance" }
# Turso: the async embedded SQLite-compatible engine (spec §6). Beta. Adapter-only.
turso = "0.7.0-pre.10"

# Not I/O: serialization, error, and async-glue helpers only (see spec §5).
# async-trait is a proc-macro (dyn-safe async ports), not a runtime — allowed in core.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { version = "2", features = ["display", "error", "from"] }
async-trait = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
# tokio is a runtime (I/O): test-only in tda-app; never a tda-core/tda-app normal dep.
tokio = { version = "1", features = ["rt", "macros"] }
