[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.3.0"
license = "Apache-2.0"
repository = "https://github.com/davidB/todoapp"
homepage = "https://github.com/davidB/todoapp"
publish = true

[workspace.dependencies]
todoapp-core = { version = "0.3.0", path = "crates/todoapp-core" }
todoapp-app = { version = "0.3.0", path = "crates/todoapp-app" }
todoapp-store-mem = { path = "crates/todoapp-store-mem" }
todoapp-store-turso = { version = "0.3.0", path = "crates/todoapp-store-turso" }
todoapp-conformance = { path = "crates/todoapp-conformance" }
todoapp-config = { version = "0.3.0", path = "crates/todoapp-config" }
todoapp-tui = { version = "0.3.0", path = "crates/todoapp-tui" }
# Turso: the async embedded SQLite-compatible engine (spec §6). Beta. Adapter-only.
turso = "0.7.0-pre.10"

# Not I/O: serialization, error, and async-glue helpers only (see spec §5).
# async-trait is a proc-macro (dyn-safe async ports), not a runtime — allowed in core.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = { version = "2", features = ["display", "error", "from"] }
async-trait = "0.1"
insta = { version = "1", features = ["json"] }
proptest = "1"
rstest = "0.26"
# tokio is a runtime (I/O): test-only in todoapp-app; never a todoapp-core/todoapp-app normal dep.
tokio = { version = "1", features = ["rt", "macros"] }
# TUI binary deps (todoapp-tui)
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
ratatui = "0.30"
tui-input = { version = "0.15", default-features = false }
toml = "1"
toml_edit = "0.23"
ulid = "1"
# wayland-data-control: without it, arboard only reaches X11/XWayland — on a
# pure-Wayland session (no XWayland) `set_text` can return `Ok` without the
# content ever reaching the real clipboard.
arboard = { version = "3", features = ["wayland-data-control"] }
# Already resolved transitively (tantivy/termwiz) — used directly for the OSC
# 52 clipboard fallback (terminal escape sequence), which works even where
# arboard can't reach a clipboard (SSH, sandboxed, unsupported compositors).
base64 = "0.22"

[workspace.lints.clippy]
cargo = { level = "allow", priority = -1 }
dbg_macro = "warn"
decimal_literal_representation = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
implicit_hasher = "allow"
indexing_slicing = "allow"
large_include_file = "warn"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"
wildcard_imports = "allow"

[workspace.lints.rust]
deprecated = "warn"
missing_docs = "allow"
non_snake_case = "allow"
unsafe_code = "deny"
warnings = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
