[package]
name = "tda-app"
description = "tda use cases: orchestrate the core + ports (decide/apply)."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tda-core.workspace = true
serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true

[dev-dependencies]
tda-store-mem.workspace = true
insta.workspace = true
proptest.workspace = true
