[package]
name = "tda-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Keyboard-free CLI for tda (M3) — JSON output for agents and scripts"

[[bin]]
name = "tda"
path = "src/main.rs"

[dependencies]
tda-core = { workspace = true }
tda-app = { workspace = true }
tda-store-turso = { workspace = true }
tda-tui = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
