[package]
name = "tda-core"
description = "tda domain core: entities, capabilities, ports. No I/O deps (see spec §5)."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# tda-core MUST stay free of I/O / framework crates (enforced by `mise run lint`).
# serde (derive) + derive_more are serialization/error helpers, not I/O — allowed.
[dependencies]
serde.workspace = true
derive_more.workspace = true
async-trait.workspace = true
