[package]
name = "tda-store-mem"
description = "tda in-memory store adapter (plain composed structs) for tests + fast dev."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tda-core.workspace = true
async-trait.workspace = true
