[package]
name = "tda-store-mem"
description = "tda in-memory store adapter (per-capability component maps) for tests + fast dev."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tda-core.workspace = true
async-trait.workspace = true

[dev-dependencies]
tda-app.workspace = true
tda-conformance.workspace = true
tokio.workspace = true
