[package]
name = "tda-store-turso"
description = "tda persistence adapter over Turso (embedded SQLite-compatible), spec §7."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tda-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
turso.workspace = true

[dev-dependencies]
tda-app.workspace = true
tda-conformance.workspace = true
tokio.workspace = true
