[package]
name = "tda-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Keyboard-first TUI for tda (M4)"

[[bin]]
name = "tda"
path = "src/main.rs"

[dependencies]
tda-core = { workspace = true }
tda-app = { workspace = true }
tda-store-turso = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
