[package]
name = "tda-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Keyboard-first TUI for tda (M4)"

[dependencies]
tda-core = { workspace = true }
tda-app = { workspace = true }
tda-store-turso = { workspace = true }
anyhow = { workspace = true }
jiff = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
throbber-widgets-tui = { version = "0.11", default-features = false }
tokio = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
