[package]
name = "todoapp-app"
description = "tda use cases: orchestrate the core + ports (decide/apply)."
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
todoapp-core.workspace = true
serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
jiff.workspace = true

[dev-dependencies]
todoapp-store-mem.workspace = true
todoapp-conformance.workspace = true
proptest.workspace = true
tokio.workspace = true
