[package]
name = "todoapp-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
description = "Keyboard-free CLI for tda (M3) — JSON output for agents and scripts"

[[bin]]
name = "tda"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
todoapp-core = { workspace = true }
todoapp-app = { workspace = true }
todoapp-tui = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
