[package]
name = "todoapp-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Keyboard-first CLI + TUI for tda — capture, organize, and refine tasks, for humans and AI agents"
keywords = ["todo", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "tda"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
todoapp-core = { workspace = true }
todoapp-app = { workspace = true }
todoapp-tui = { workspace = true }
todoapp-config = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
