[package]
name = "todoapp-cli"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Keyboard-first CLI + TUI for tda — capture, organize, and refine tasks, for humans and AI agents"
keywords = ["todo", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "tda"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[features]
default = ["tui"]
# The interactive TUI (`tda tui`) and, with it, the IPC server other `tda`
# invocations proxy to. Without it, `tda` is a headless CLI with no ratatui deps.
tui = [
    "dep:crossterm",
    "dep:ratatui",
    "dep:throbber-widgets-tui",
    "dep:tui-markdown",
    "dep:tui-input",
    "dep:arboard",
    "dep:base64",
    "dep:toml",
]

[dependencies]
todoapp-core = { workspace = true }
todoapp-app = { workspace = true }
todoapp-store-turso = { workspace = true }
todoapp-config = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util"] }
ulid = { workspace = true }

# TUI-only (behind the `tui` feature).
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
throbber-widgets-tui = { version = "0.11", default-features = false, optional = true }
tui-markdown = { version = "0.3.8", default-features = false, optional = true }
tui-input = { workspace = true, optional = true }
arboard = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
