[package]
name = "todoapp-config"
description = "Shared DB path resolution and config.toml/tui.toml helpers for tda (task manager for humans and AI agents)."
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
todoapp-store-turso = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
