[package]
name = "todoapp-conformance"
description = "Shared port-conformance test suite + deterministic fixtures, run against every store (spec §11)."
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
repository.workspace = true

[dependencies]
todoapp-core.workspace = true

[dev-dependencies]
todoapp-app.workspace = true
todoapp-store-mem.workspace = true
todoapp-store-turso.workspace = true
tokio.workspace = true
