[package]
name = "todoapp-core"
description = "Domain core of tda (task manager for humans and AI agents): entities, capabilities, and ports. No I/O deps."
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

# todoapp-core MUST stay free of I/O / framework crates (enforced by `mise run lint`).
# serde (derive) + derive_more are serialization/error helpers, not I/O — allowed.
[dependencies]
serde.workspace = true
derive_more.workspace = true
async-trait.workspace = true
# jiff is a calendar/value library (like serde), not I/O/runtime — allowed (spec §5).
jiff.workspace = true

[dev-dependencies]
serde_json.workspace = true
rstest.workspace = true
