[package]
name = "todoapp-store-turso"
description = "Persistence adapter for tda (task manager for humans and AI agents), built on Turso (embedded, SQLite-compatible)."
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
todoapp-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
turso.workspace = true
