[package]
name = "todoapp-tui"
edition.workspace = true
version.workspace = true
publish.workspace = true
license.workspace = true
description = "Keyboard-first TUI for tda (M4)"

[dependencies]
todoapp-core = { workspace = true }
todoapp-app = { workspace = true }
todoapp-store-turso = { workspace = true }
anyhow = { workspace = true }
jiff = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
throbber-widgets-tui = { version = "0.11", default-features = false }
tui-markdown = { version = "0.3.8", default-features = false }
tui-input = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
